--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "bootstrap": "^5.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
