--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/redux-thunk": "^2.1.0",
     "@vitejs/plugin-react": "^2.0.1",
     "autoprefixer": "^10.4.8",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "postcss": "^8.4.16",
     "react-bootstrap": "^2.5.0",
     "react-icons": "^4.4.0",
@@ -28,6 +31,7 @@
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "stripe": "^10.14.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
